service-mesh/example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-example
  labels:
    app.kubernetes.io/component: istio-example
    kubernetes.io/metadata.name: istio-example
    #istio-injection: enabled
